auto-test/tests/chapter_18/valid/extra_credit/other_features/decr_arrow_lexing.c

int main(void) {
    int arr[3] = {0, 1, 2};
    int *ptr = arr + 2;
    if(ptr-->arr) {
        return 0; 
    }
    return 1; 
}